--- a/internship.html
+++ b/internship.html
@@ -41,11 +41,15 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698669954-internet-application-developer'>Verisk Internet Application Developer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/studio71us/094099f9-1c6b-4376-a180-06f8c97cc9dc'>Studio71 - Business Strategy and Development Internship Winter 2020- Los Angeles</a></h5> 
 <p><span class="badge badge-light">Los Angeles  Los Angeles  Los Angeles  Los Angeles</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/studio71us/4a68aa04-8d25-4286-a0f6-e72e7b22733f'>Studio71 - Beauty and Lifestyle Internship Winter 2020 - Los Angeles</a></h5> 
+<h5><a href='https://jobs.lever.co/studio71us/4a68aa04-8d25-4286-a0f6-e72e7b22733f'>Studio71 - Beauty and Lifestyle Internship Winter 2020 - Los Angeles</a></h5> 
 <p><span class="badge badge-light">Los Angeles  Los Angeles  Los Angeles  Los Angeles Berlin</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -117,13 +121,13 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://fi12.recruiterbox.com/jobs/fk09dv'>
+<h5><a href='https://fi12.recruiterbox.com/jobs/fk09dv'>
     Marketing Intern for Startup Accelerator at Founder Institute
 </a></h5> 
 <p><span class="badge badge-light">Palo Alto, California</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bounteous/f50a8a8c-f2de-4a36-9eda-e3c02fd0ae92'>Bounteous - Marketing Web Analytics Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bounteous/f50a8a8c-f2de-4a36-9eda-e3c02fd0ae92'>Bounteous - Marketing Web Analytics Intern</a></h5> 
 <p><span class="badge badge-light">Pittsburgh</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -255,7 +259,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://adeccogroup.referrals.selectminds.com/jobs/sales-innovation-internship-933'>Sales&Innovation Internship -  The Adecco Group Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adeccogroup.referrals.selectminds.com/jobs/sales-innovation-internship-933'>Sales&Innovation Internship -  The Adecco Group Careers</a></h5> 
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -313,11 +317,11 @@
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://memphistn.referrals.selectminds.com/jobs/urban-fellow-internship-spring-2020-653'>Urban Fellow Internship Spring 2020 - City of Memphis Careers</a></h5> 
+<h5><a href='https://memphistn.referrals.selectminds.com/jobs/urban-fellow-internship-spring-2020-653'>Urban Fellow Internship Spring 2020 - City of Memphis Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698628454--internship-supply-chain-management-intern'>Bosch Group [Internship] Supply Chain Management Intern | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698628454--internship-supply-chain-management-intern'>Bosch Group [Internship] Supply Chain Management Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Ho Chi Minh Vietnam  Vietnam</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -351,7 +355,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://linkengcomencareers.applytojob.com/apply/d1fJbpAlJC/Mechanical-Engineering-Summer-Internship-2020'>Mechanical Engineering Summer Internship 2020 - Link Engineering Company - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://linkengcomencareers.applytojob.com/apply/d1fJbpAlJC/Mechanical-Engineering-Summer-Internship-2020'>Mechanical Engineering Summer Internship 2020 - Link Engineering Company - Career Page</a></h5> 
 <p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -404,7 +408,7 @@ parallel computing? If so, we want to hear from you. NVIDIA is committed to?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://colorfy.join.com/jobs/473114-project-management-intern-f-m'>Job @ colorfy (Berlin): Project Management Intern ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://colorfy.join.com/jobs/473114-project-management-intern-f-m'>Job @ colorfy (Berlin): Project Management Intern ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -412,7 +416,7 @@ parallel computing? If so, we want to hear from you. NVIDIA is committed to?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/3dhubs/8eb2e0db-9a5c-4f95-a262-778e361b0877'>3D Hubs - 3D Printing Order Fulfilment Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/3dhubs/8eb2e0db-9a5c-4f95-a262-778e361b0877'>3D Hubs - 3D Printing Order Fulfilment Intern</a></h5> 
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -436,7 +440,7 @@ parallel computing? If so, we want to hear from you. NVIDIA is committed to?...<
 <p><span class="badge badge-light">Kenya Kenya</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/VcheckGlobalLLC/743999698618463-intern-finance'>Vcheck Global LLC Intern, Finance | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/VcheckGlobalLLC/743999698618463-intern-finance'>Vcheck Global LLC Intern, Finance | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -448,12 +452,6 @@ parallel computing? If so, we want to hear from you. NVIDIA is committed to?...<
 <hr/>
 <h5><a href='https://jobs.lever.co/delphix/ca68f54a-d977-4e30-85b4-ea90ecd28846'>Delphix - Engineering Internship</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://helloprint.recruitee.com/l/fr/o/uiux-designer-internship-rotterdam'>
-      UI/UX Designer Internship - Helloprint
-    </a></h5> 
-<p><span class="badge badge-light">Rotterdam</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
