Senior Software Developer job in Collierville, TN (38017) - The Commercial Appeal. Schneider Electric NAM Careers - Software Developer. Verisk Software Developer | SmartRecruiters. LaunchCode Junior Software Engineer | SmartRecruiters. LaunchCode Junior Software Developer | SmartRecruiters. LaunchCode Junior Software Developer | SmartRecruiters. LaunchCode Entry Level Software Developer | SmartRecruiters. LaunchCode Entry Level Software Developer | SmartRecruiters. DevIQ Sr. Ruby on Rails Software Developer, Full-Stack | SmartRecruiters. Senior Software Developer - Jerry. Java Software Developer - devjobs.at. Impinj Careers - Software Developer. Workiva Inc. Careers - Senior Software Engineer. Job Application for Senior Software Engineer at Util. Mid-level Software Engineer at TheMomProject.com. Software Developer - ASP.NET / SQL Server - Aberde - Aberdeenshire - UK - Scotland, Grampian, Aberdeenshire - (1038). Lead Application Software Engineer. Allegro Development Corporation Careers - Senior Software Engineer II. Couchbase - Software Engineer - GO. Couchbase - Software Engineer - GO. Couchbase - Principal Software Engineer - Query Optimizer. Dynatrace - Localization Software Engineer - (English to Chinese) - new. JFDI Recruitment UX / UI  PHP Software Developer | SmartRecruiters. Senior Software Developers C# £50K - £60K - Eastleigh, Hampshire - zupaJobs. RigUp - Full Stack Software Engineer. realtor.com - Senior Software Engineer. Manager, Software Engineering - Hearst Careers. Imperva Careers - Sr. Software Engineer, Java. Frontend Software Engineer - Grafana Labs. 	Software Engineer | CACI International . Schneider Electric NAM Careers - Software Developer, Software Innovation Center. Job Application for Senior Software Engineer - .NET Core APIs at Endurance International Group. Job Application for Sr. Software Engineer - SPAs with React at Endurance International Group. Robotics Localization Software Engineer – Localization Jobs. Verisk Sr Software Engineer, 

--- a/software.html
+++ b/software.html
@@ -39,8 +39,16 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698670344-software-developer'>Verisk Software Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.commercialappeal.com/Job?data=XI1fsyQrh9u0esy/ajZmgWS/rTpmjyWuwnRLRcInuzCmMG%2BwyZTIQA%3D%3D'>Senior Software Developer job in Collierville, TN (38017) - The Commercial Appeal</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oJHX9fwg&__jvst=Employee&__jvsd=sep77gwC&__jvsc=Twitter&bid=nU1MqMwo'>Schneider Electric NAM Careers - Software Developer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698670344-software-developer'>Verisk Software Developer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Lehi, UT, USA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698671439-junior-software-engineer'>LaunchCode Junior Software Engineer | SmartRecruiters</a></h5> 
@@ -48,7 +56,7 @@
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698671311-junior-software-developer'>LaunchCode Junior Software Developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Plantation, FL</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698671376-junior-software-developer'>LaunchCode Junior Software Developer | SmartRecruiters</a></h5> 
@@ -60,7 +68,7 @@
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698671343-entry-level-software-developer'>LaunchCode Entry Level Software Developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Manchester</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/DevIQ/743999698668046-sr-ruby-on-rails-software-developer-full-stack'>DevIQ Sr. Ruby on Rails Software Developer, Full-Stack | SmartRecruiters</a></h5> 
@@ -83,11 +91,11 @@
 <p><span class="badge badge-light">Denver, Colorado</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/util/jobs/4434918002'>Job Application for Senior Software Engineer at Util</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/util/jobs/4434918002'>Job Application for Senior Software Engineer at Util</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://themomproject-com.breezy.hr/p/e65752334a4b-mid-level-software-engineer'>Mid-level Software Engineer at TheMomProject.com</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://themomproject-com.breezy.hr/p/e65752334a4b-mid-level-software-engineer'>Mid-level Software Engineer at TheMomProject.com</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -165,7 +173,7 @@
 <p><span class="badge badge-light">Burlington, MA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://l10n.org/job/robotics-localization-software-engineer/'>Robotics Localization Software Engineer ? Localization Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://l10n.org/job/robotics-localization-software-engineer/'>Robotics Localization Software Engineer ? Localization Jobs</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -205,11 +213,11 @@
 <p><span class="badge badge-light">Denver, Colorado</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.invokegeek.com/jobs/software-engineer-node-js-platform/'>Software Engineer, Node.js Platform ? invokeGeek</a></h5> 
+<h5><a href='https://www.invokegeek.com/jobs/software-engineer-node-js-platform/'>Software Engineer, Node.js Platform ? invokeGeek</a></h5> 
 <p><span class="badge badge-light">United States  San Jose, CA</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/medmen/jobs/4500536002'>Job Application for Principal Software Engineer at MedMen</a></h5> 
+<h5><a href='https://boards.greenhouse.io/medmen/jobs/4500536002'>Job Application for Principal Software Engineer at MedMen</a></h5> 
 <p><span class="badge badge-light">Culver City, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -261,7 +269,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/recurly/78b93aa9-bdb2-4f68-ac68-b4925b20d78d'>Recurly - Software Engineer, Growth</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/recurly/78b93aa9-bdb2-4f68-ac68-b4925b20d78d'>Recurly - Software Engineer, Growth</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -297,7 +305,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dataiku/a4e06a5b-0bcf-4613-9daf-2fb40a8c7eab'>Dataiku - Software Engineer Intern - Fuzzy Join</a></h5> 
+<h5><a href='https://jobs.lever.co/dataiku/a4e06a5b-0bcf-4613-9daf-2fb40a8c7eab'>Dataiku - Software Engineer Intern - Fuzzy Join</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -361,15 +369,15 @@
 <p><span class="badge badge-light">Singapore  Singapore  Singapore</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/agoda/jobs/1937192'>Job Application for Graduate Back End Software Engineer - Singapore at Agoda</a></h5> 
+<h5><a href='https://boards.greenhouse.io/agoda/jobs/1937192'>Job Application for Graduate Back End Software Engineer - Singapore at Agoda</a></h5> 
 <p><span class="badge badge-light">Singapore Singapore  Singapore, Singapore</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/agoda/jobs/1939340'>Job Application for Software Engineer - Big Data/Machine Learning at Agoda</a></h5> 
+<h5><a href='https://boards.greenhouse.io/agoda/jobs/1939340'>Job Application for Software Engineer - Big Data/Machine Learning at Agoda</a></h5> 
 <p><span class="badge badge-light">Singapore  Singapore  Singapore</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://www.welovegolang.com/jobs/software-engineer-backend-tokyo-relocation-provided-5689436834627584'>Software Engineer, Backend (Tokyo) (Relocation Provided) at Mercari, Inc. - We Love Go</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.welovegolang.com/jobs/software-engineer-backend-tokyo-relocation-provided-5689436834627584'>Software Engineer, Backend (Tokyo) (Relocation Provided) at Mercari, Inc. - We Love Go</a></h5> 
 <p><span class="badge badge-light">Tokyo Tokyo Tokyo, Japan</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -429,17 +437,9 @@
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AccoladeInc/743999698625073-software-engineer-iii-back-end-java-aws-'>Accolade, Inc. Software Engineer III (Back-End - Java & AWS) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AccoladeInc/743999698625073-software-engineer-iii-back-end-java-aws-'>Accolade, Inc. Software Engineer III (Back-End - Java & AWS) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='http://sparkcognition.applytojob.com/apply/WJtXUDOzHZ/Software-Engineer'>Software Engineer - SparkCognition - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/chegg/job/obukbfwU'>Chegg Careers - Staff Software Engineer - Frontend React/Redux</a></h5> 
-<p><span class="badge badge-light">New York, New York</span></p>
-<p>Posted on: 2019-10-31</p>
 <hr/>
 
 
